# dev-guides

./: CONTRIBUTING.md  README.md
.scripts/: add_toc.py
01-uv/: README.md
01-uv/examples/01-basic-project/: README.md  pyproject.toml
01-uv/examples/01-basic-project/src/my_app/: __init__.py  __main__.py  main.py
01-uv/examples/01-basic-project/tests/: test_main.py
01-uv/examples/02-workspace/: README.md  pyproject.toml
02-python-packaging/: README.md
02-python-packaging/examples/01-basic-package/: LICENSE  README.md  pyproject.toml
02-python-packaging/examples/01-basic-package/src/my_package/: __init__.py  cli.py  core.py
02-python-packaging/examples/01-basic-package/tests/: test_cli.py  test_core.py
02-python-packaging/examples/02-namespace-package/: README.md  pyproject.toml
02-python-packaging/examples/03-private-index/: README.md
03-os-independent-dev/: README.md
03-os-independent-dev/examples/01-path-handling/: README.md  pyproject.toml
03-os-independent-dev/examples/01-path-handling/src/path_demo/: __init__.py  __main__.py  utils.py
03-os-independent-dev/examples/01-path-handling/tests/: test_utils.py
03-os-independent-dev/examples/02-cross-platform-script/: .gitattributes  README.md  Taskfile.yml  dev.py
03-os-independent-dev/examples/03-cross-platform-demo/: .env.example  README.md  pyproject.toml
03-os-independent-dev/examples/03-cross-platform-demo/src/demo/: __init__.py  app.py  settings.py
04-wsl-docker-registry/: README.md
04-wsl-docker-registry/examples/01-wsl-setup/: README.md
04-wsl-docker-registry/examples/02-private-registry/: README.md  compose.yml
05-dockerfile/: README.md
05-dockerfile/examples/01-basic-image/: Dockerfile  README.md
05-dockerfile/examples/01-basic-image/src/app/: main.py
05-dockerfile/examples/02-multistage-build/: Dockerfile  README.md
05-dockerfile/examples/02-multistage-build/src/app/: main.py
05-dockerfile/examples/03-uv-docker/: Dockerfile  README.md  pyproject.toml
05-dockerfile/examples/03-uv-docker/src/app/: main.py
06-docker-compose/: README.md
06-docker-compose/examples/01-single-service/: README.md  compose.yml
06-docker-compose/examples/01-single-service/src/app/: main.py
06-docker-compose/examples/02-multi-service/: Dockerfile  README.md  compose.yml
06-docker-compose/examples/02-multi-service/src/app/: main.py
06-docker-compose/examples/03-dev-override/: README.md  compose.override.yml  compose.yml
06-docker-compose/examples/03-dev-override/src/app/: main.py
07-dev-containers/: README.md
07-dev-containers/examples/01-streamlit-app/: Dockerfile  README.md  compose.dev.yml  pyproject.toml
07-dev-containers/examples/01-streamlit-app/src/my_app/: __init__.py  app.py
08-git/: README.md
09-claude/: README.md
09-claude/examples/01-project-setup/: CLAUDE.md.template
09-claude/examples/02-custom-agents/: code-reviewer.md  test-writer.md
