[project]
name = "my-package"
version = "1.0.0"
description = "Python 패키징 기본 예제"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Developer", email = "dev@example.com" },
]
keywords = ["example", "packaging", "tutorial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

# CLI 엔트리포인트: 설치 후 'my-cli' 명령어로 실행 가능
[project.scripts]
my-cli = "my_package.cli:main"

[project.urls]
Homepage = "https://github.com/example/my-package"
Repository = "https://github.com/example/my-package"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_package"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
