[project]
name = "path-demo"
version = "0.1.0"
description = "pathlib 크로스 플랫폼 경로 처리 예제"
requires-python = ">=3.12"
dependencies = ["platformdirs>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/path_demo"]
