[project]
name = "cross-platform-demo"
version = "0.1.0"
description = "크로스 플랫폼 개발 요소 통합 데모 (Streamlit)"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "platformdirs>=4.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]
